Update search input placeholder text

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <input
                 class="form-control me-2 cat-input"
                 type="search"
-                placeholder="Check pawfect match 🐾"
+                placeholder="paw name / ID 🐾"
               />
               <button class="btn cat-btn-outline" type="button">Search</button>
             </form>
